<resources>
    <string name="app_name">Nitrozen</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nitrozen Components</string>
    <string name="nav_header_subtitle">https://github.com/gofynd/nitrozen-android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_nbtn">NButton</string>
    <string name="menu_ninput">NInput</string>
    <string name="menu_ndropdown">NDropdown</string>
    <string name="menu_ncheckbox">NCheckbox</string>
    <string name="menu_nradio">NRadio</string>
    <string name="menu_nautocomplete">NAutocomplete</string>
    <string name="menu_naswitch">NSwitch</string>


    <string name="home_second">Home Second</string>
</resources>
